modules/module.vpc/vpc-network-acl.tf
#################################################
#       NACL for Public Subnet                  #
#################################################
resource "aws_network_acl" "public_nacl" {
  vpc_id = aws_vpc.vpc.id
  subnet_ids = aws_subnet.public.*.id

  ingress {
    protocol = "udp"
    rule_no = 501
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 123
    to_port = 123
  }

  ingress {
    protocol = "tcp"
    rule_no = 601
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 80
    to_port = 80
  }

  ingress {
    protocol = "tcp"
    rule_no = 201
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 443
    to_port = 443
  }

  ingress {
    protocol = "tcp"
    rule_no = 301
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 22
    to_port = 22
  }

  ingress {
    protocol = "tcp"
    rule_no = 401
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 1024
    to_port = 65535
  }

  egress {
    protocol = "udp"
    rule_no = 501
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 123
    to_port = 123
  }

  egress {
    protocol = "tcp"
    rule_no = 601
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 80
    to_port = 80
  }

  egress {
    protocol = "tcp"
    rule_no = 201
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 443
    to_port = 443
  }

  egress {
    protocol = "tcp"
    rule_no = 301
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 22
    to_port = 22
  }

  egress {
    protocol = "tcp"
    rule_no = 401
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 1024
    to_port = 65535
  }

  tags = merge(local.common_tags, map("Name", "Public-${var.environment}-NACL"))
}



#################################################
#       NACL for Private Subnet                 #
#################################################
resource "aws_network_acl" "private_nacl" {
  vpc_id = aws_vpc.vpc.id
  subnet_ids = aws_subnet.private.*.id

  ingress {
    protocol = "udp"
    rule_no = 501
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 123
    to_port = 123
  }

  ingress {
    protocol = "tcp"
    rule_no = 601
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 80
    to_port = 80
  }

  ingress {
    protocol = "tcp"
    rule_no = 201
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 443
    to_port = 443
  }

  ingress {
    protocol = "tcp"
    rule_no = 301
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 22
    to_port = 22
  }

  ingress {
    protocol = "tcp"
    rule_no = 401
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 1024
    to_port = 65535
  }

  egress {
    protocol = "udp"
    rule_no = 501
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 123
    to_port = 123
  }

  egress {
    protocol = "tcp"
    rule_no = 601
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 80
    to_port = 80
  }

  egress {
    protocol = "tcp"
    rule_no = 201
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 443
    to_port = 443
  }

  egress {
    protocol = "tcp"
    rule_no = 301
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 22
    to_port = 22
  }

  egress {
    protocol = "tcp"
    rule_no = 401
    action = "allow"
    cidr_block =  "0.0.0.0/0"
    from_port = 1024
    to_port = 65535
  }

  tags = merge(local.common_tags, map("Name", "Private-${var.environment}-NACL"))
}
